--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netist/ui",
-  "version": "0.1.5",
+  "version": "0.1.7",
   "author": "Ebubekir Yazgan <yazganebubekir4@gmail.com>",
   "license": "MIT",
   "repository": {
@@ -42,39 +42,40 @@
     "typecheck": "node_modules/.bin/tsc --noEmit"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.20",
-    "@storybook/addon-interactions": "^7.6.20",
-    "@storybook/addon-links": "^7.6.20",
+    "@chromatic-com/storybook": "^3.2.4",
+    "@storybook/addon-essentials": "^8.5.0",
+    "@storybook/addon-interactions": "^8.5.0",
+    "@storybook/addon-links": "^8.5.0",
     "@storybook/addon-styling": "^1.3.7",
-    "@storybook/blocks": "^7.6.20",
-    "@storybook/react": "^7.6.20",
-    "@storybook/react-vite": "^7.6.20",
-    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/blocks": "^8.5.0",
+    "@storybook/react": "^8.5.0",
+    "@storybook/react-vite": "^8.5.0",
+    "@storybook/test": "^8.5.0",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jsdom": "^21.1.7",
-    "@types/react": "^18.3.9",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^0.32.4",
     "autoprefixer": "^10.4.20",
     "chromatic": "^6.24.1",
     "eslint": "^7.32.0",
-    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-storybook": "^0.11.2",
     "jsdom": "^22.1.0",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "resize-observer-polyfill": "^1.5.1",
     "rimraf": "^5.0.10",
-    "storybook": "^7.6.20",
-    "tailwindcss": "^3.4.13",
+    "storybook": "^8.5.0",
+    "tailwindcss": "^3.4.17",
     "tsc-alias": "^1.8.10",
-    "typescript": "^5.6.2",
-    "vite": "^4.5.5",
+    "typescript": "^5.7.3",
+    "vite": "^4.5.9",
     "vite-plugin-turbosnap": "^1.0.3",
     "vitest": "^0.32.4"
   },
@@ -82,34 +83,36 @@
     "@medusajs/eslint-config-ui": "^0.0.1",
     "@medusajs/icons": "^1.2.2",
     "@medusajs/ui-preset": "^1.1.4",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-portal": "^1.1.1",
-    "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@react-aria/datepicker": "^3.11.2",
-    "@react-stately/datepicker": "^3.10.2",
+    "@netist/icons": "^0.0.13",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-portal": "^1.1.3",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-aria/datepicker": "^3.13.0",
+    "@react-stately/datepicker": "^3.12.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.3",
     "date-fns": "^2.30.0",
-    "prism-react-renderer": "^2.4.0",
+    "prism-react-renderer": "^2.4.1",
     "react-colorful": "^5.6.1",
-    "react-currency-input-field": "^3.8.0",
+    "react-currency-input-field": "^3.9.0",
     "react-day-picker": "^8.10.1",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^1.14.0",
     "yarn": "^1.22.22"
   },
