--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netist/ui",
-  "version": "0.1.7",
+  "version": "0.1.9",
   "author": "Ebubekir Yazgan <yazganebubekir4@gmail.com>",
   "license": "MIT",
   "repository": {
@@ -85,25 +85,47 @@
     "@medusajs/ui-preset": "^1.1.4",
     "@netist/icons": "^0.0.13",
     "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-portal": "^1.1.3",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-tooltip": "^1.1.6",
+    "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@react-aria/datepicker": "^3.13.0",
     "@react-stately/datepicker": "^3.12.0",
+    "@tiptap/extension-underline": "^2.11.3",
+    "@tiptap/extension-strike": "^2.11.3",
+    "@tiptap/extension-heading": "^2.11.3",
+    "@tiptap/extension-link": "^2.11.3",
+    "@tiptap/extension-image": "^2.11.3",
+    "@tiptap/extension-table": "^2.11.3",
+    "@tiptap/extension-table-row": "^2.11.3",
+    "@tiptap/extension-table-cell": "^2.11.3",
+    "@tiptap/extension-table-header": "^2.11.3",
+    "@tiptap/extension-dropcursor": "^2.11.3",
+    "@tiptap/extension-code-block": "^2.11.3",
+    "@tiptap/extension-highlight": "^2.11.3",
+    "@tiptap/react": "^2.11.3",
+    "@tiptap/starter-kit": "^2.11.3",
+    "@tiptap/extension-character-count": "^2.11.3",
+    "@tiptap/extension-code": "^2.11.3",
+    "@tiptap/extension-document": "^2.11.3",
+    "@tiptap/extension-font-family": "^2.11.3",
+    "@tiptap/extension-paragraph": "^2.11.3",
+    "@tiptap/extension-text": "^2.11.3",
+    "@tiptap/extension-text-align": "^2.11.3",
+    "@tiptap/extension-text-style": "^2.11.3",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.3",
@@ -112,6 +134,7 @@
     "react-colorful": "^5.6.1",
     "react-currency-input-field": "^3.9.0",
     "react-day-picker": "^8.10.1",
+    "recharts": "^2.15.0",
     "sonner": "^1.7.2",
     "tailwind-merge": "^1.14.0",
     "yarn": "^1.22.22"
