--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netist/ui",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "Ebubekir Yazgan <yazganebubekir4@gmail.com>",
   "license": "MIT",
   "repository": {
@@ -39,7 +39,9 @@
     "lint": "node_modules/.bin/eslint \"**/*.ts*\"",
     "storybook": "node_modules/.bin/storybook dev -p 6006",
     "storybook:build": "node_modules/.bin/storybook build",
-    "typecheck": "node_modules/.bin/tsc --noEmit"
+    "build-storybook": "node_modules/.bin/storybook build",
+    "typecheck": "node_modules/.bin/tsc --noEmit",
+    "chromatic": "npx chromatic --project-token=chpt_6282e74a8776808"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
@@ -61,7 +63,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^0.32.4",
     "autoprefixer": "^10.4.20",
-    "chromatic": "^6.24.1",
+    "chromatic": "^11.25.1",
     "eslint": "^7.32.0",
     "eslint-plugin-storybook": "^0.11.2",
     "jsdom": "^22.1.0",
@@ -104,28 +106,30 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-aria/datepicker": "^3.13.0",
     "@react-stately/datepicker": "^3.12.0",
-    "@tiptap/extension-underline": "^2.11.3",
-    "@tiptap/extension-strike": "^2.11.3",
-    "@tiptap/extension-heading": "^2.11.3",
-    "@tiptap/extension-link": "^2.11.3",
-    "@tiptap/extension-image": "^2.11.3",
-    "@tiptap/extension-table": "^2.11.3",
-    "@tiptap/extension-table-row": "^2.11.3",
-    "@tiptap/extension-table-cell": "^2.11.3",
-    "@tiptap/extension-table-header": "^2.11.3",
-    "@tiptap/extension-dropcursor": "^2.11.3",
-    "@tiptap/extension-code-block": "^2.11.3",
-    "@tiptap/extension-highlight": "^2.11.3",
-    "@tiptap/react": "^2.11.3",
-    "@tiptap/starter-kit": "^2.11.3",
+    "@tiptap/extension-blockquote": "^2.11.3",
     "@tiptap/extension-character-count": "^2.11.3",
     "@tiptap/extension-code": "^2.11.3",
+    "@tiptap/extension-code-block": "^2.11.3",
     "@tiptap/extension-document": "^2.11.3",
+    "@tiptap/extension-dropcursor": "^2.11.3",
     "@tiptap/extension-font-family": "^2.11.3",
+    "@tiptap/extension-heading": "^2.11.3",
+    "@tiptap/extension-highlight": "^2.11.3",
+    "@tiptap/extension-image": "^2.11.3",
+    "@tiptap/extension-link": "^2.11.3",
     "@tiptap/extension-paragraph": "^2.11.3",
+    "@tiptap/extension-placeholder": "^2.11.3",
+    "@tiptap/extension-strike": "^2.11.3",
+    "@tiptap/extension-table": "^2.11.3",
+    "@tiptap/extension-table-cell": "^2.11.3",
+    "@tiptap/extension-table-header": "^2.11.3",
+    "@tiptap/extension-table-row": "^2.11.3",
     "@tiptap/extension-text": "^2.11.3",
     "@tiptap/extension-text-align": "^2.11.3",
     "@tiptap/extension-text-style": "^2.11.3",
+    "@tiptap/extension-underline": "^2.11.3",
+    "@tiptap/react": "^2.11.3",
+    "@tiptap/starter-kit": "^2.11.3",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.3",
